NetBSD Problem Report #50953

From www@NetBSD.org  Fri Mar 11 17:29:55 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 6684C7AC07
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 11 Mar 2016 17:29:55 +0000 (UTC)
Message-Id: <20160311172954.8CB1F7ACBC@mollari.NetBSD.org>
Date: Fri, 11 Mar 2016 17:29:54 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/usr.bin/xstr/xstr.c:393]:style) Suspicious condition
X-Send-Pr-Version: www-1.0

>Number:         50953
>Category:       bin
>Synopsis:       src/usr.bin/xstr/xstr.c:393]:style) Suspicious condition
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Mar 11 17:30:01 +0000 2016
>Closed-Date:    Sat Mar 12 01:50:41 +0000 2016
>Last-Modified:  Sat Mar 12 01:50:41 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160311
>Organization:
>Environment:
>Description:

src/usr.bin/xstr/xstr.c:393]: (style) Suspicious condition (assignment + comparison); Clarify expression with parentheses.

Source code is

   while (--rmdr > 0 && (c = xgetc(file) != 0 && c != EOF))


Maybe better code

   while (--rmdr > 0 && ((c = xgetc(file)) != 0 && c != EOF))












>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50953 CVS commit: src/usr.bin/xstr
Date: Fri, 11 Mar 2016 13:39:04 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Fri Mar 11 18:39:03 UTC 2016

 Modified Files:
 	src/usr.bin/xstr: xstr.c

 Log Message:
 PR/50953: David Binderman: Fix misplaced paren


 To generate a diff of this commit:
 cvs rdiff -u -r1.25 -r1.26 src/usr.bin/xstr/xstr.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sat, 12 Mar 2016 01:50:41 +0000
State-Changed-Why:
christos committed it


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.