PR/50953: David Binderman: Fix misplaced paren